--- a/components/MintCard.module.scss
+++ b/components/MintCard.module.scss
@@ -1,99 +1,99 @@
-@import '../styles/fonts.scss';
+@import "../styles/fonts.scss";
 
 .MintCard {
-  z-index: 1;
-  position: absolute;
+    z-index: 1;
+    position: absolute;
     transition: all 0.3s;
 
-  // width: 16vw;
-  // height: 28vw;
+    // width: 16vw;
+    // height: 28vw;
 }
 
 .background {
-  z-index: 1;
-  // background-color: #0bfd54;
+    z-index: 1;
+    // background-color: #0bfd54;
 }
 
 .title,
 .contents,
 .amount {
-  color: #f0c004;
-  text-transform: uppercase;
-  position: absolute;
-  font-family: 'digi';
-  // background-color: rgba(0, 255, 255, 0.37);
-  z-index: 2;
+    color: #f0c004;
+    text-transform: uppercase;
+    position: absolute;
+    font-family: "digi";
+    // background-color: rgba(0, 255, 255, 0.37);
+    z-index: 2;
 }
 
 .title {
-  width: 100%;
-  height: 12%;
-  text-align: center;
-  margin: 0;
-  line-height: 300%;
-  font-size: 150%;
+    width: 100%;
+    height: 12%;
+    text-align: center;
+    margin: 0;
+    line-height: 300%;
+    font-size: 150%;
 }
 
 .contents {
-  top: 60%;
-  width: 100%;
-  padding: 6% 17%;
-  font-size: 180%;
+    top: 60%;
+    width: 100%;
+    padding: 8% 17%;
+    font-size: 160%;
 }
 
 .amount {
-  top: 78%;
-  left: 38%;
-  font-size: 180%;
-  width: 24%;
-  text-align: center;
+    top: 78%;
+    left: 38%;
+    font-size: 180%;
+    width: 24%;
+    text-align: center;
 }
 
 .img {
-  background-color: #ab54d6;
-  position: absolute;
-  left: 12%;
-  top: 18%;
-  $width: 76%;
-  $height: 44%;
-  span {
-    width: 100%!important;
-    height: 100%!important;
-    // object-position: 10vw 10vw;
-  }
-  width: $width;
-  height: $height;
-  z-index: 0;
+    background-color: #ab54d6;
+    position: absolute;
+    left: 12%;
+    top: 18%;
+    $width: 76%;
+    $height: 44%;
+    span {
+        width: 100% !important;
+        height: 100% !important;
+        // object-position: 10vw 10vw;
+    }
+    width: $width;
+    height: $height;
+    z-index: 0;
 }
 
 .prev,
 .next,
 .buy {
-  position: absolute;
-  background-color: #0bfd5400;
-  border-color: #ff000000;
-  z-index: 2;
-  cursor: pointer;
+    position: absolute;
+    background-color: #0bfd5400;
+    border-color: #ff000000;
+    z-index: 2;
+    cursor: pointer;
 }
 
 .prev,
 .next {
-  width: 22%;
-  height: 6%;
-  top: 83%;
+    width: 22%;
+    height: 6%;
+    top: 83%;
 }
 
 .prev {
-  left: 12%;
+    left: 12%;
 }
 
 .next {
-  left: 66%;
+    left: 66%;
 }
 
 .buy {
-  width: 48%;
-  height: 8%;
-  top: 90.5%;
-  left: 26%;
+    width: 48%;
+    height: 8%;
+    top: 90.5%;
+    left: 26%;
 }
