--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -119,32 +119,29 @@ $bg_partner: (
     width: img($bg_main, "width");
     height: img($bg_main, "height");
 
-    nav {
+    // nav {
+    //   display: inline-block;
+    //   ul {
+    //     // background-color: #E91E63;
+    //     li {
+    //       a {
+    //       }
+    //     }
+    //   }
+    // }
+
+    .mainNav {
         display: inline-block;
+        padding-left: 4vw;
+        padding-top: 2.5vw;
         ul {
             display: inline-block;
             list-style-type: none;
             margin: 0;
             padding: 0;
             overflow: hidden;
-            // background-color: #E91E63;
             li {
                 display: inline-block;
-                a {
-                    display: block;
-                    text-align: center;
-                    text-decoration: none;
-                    text-transform: uppercase;
-                }
-            }
-        }
-    }
-
-    .mainNav {
-        padding-left: 4vw;
-        padding-top: 2.5vw;
-        ul {
-            li {
                 a {
                     color: white;
                     padding: 1vw 0.6vw;
