--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,13 @@ body {
     scroll-behavior: smooth;
     /* width: 1000px; */
 }
-/* 
+
 body {
-  max-width: 1000px;
-  margin: 0vw auto;
-  background-color: #000;
-} */
+    position: relative;
+    /* max-width: 1000px;
+  margin: 0vw auto; */
+    /* background-color:aqua; */
+}
 
 a {
     color: inherit;
