--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -52,7 +52,8 @@
     main.Loading {
         color: #e3ee4a;
     }
-    main.Success {
+    main.Success,
+    main.Input {
         color: #741188;
         h5 {
             font-size: 1.6vw;
@@ -66,6 +67,28 @@
     main.Failed {
         color: #f47466;
     }
+    main.Input {
+        h5 {
+            margin-bottom: 1vw;
+        }
+        input {
+            color: #741188;
+            width: 28vw;
+            border-radius: 2vw;
+            height: 2.5vw;
+            border-width: 0vw;
+            padding: 0vw 1vw;
+            margin-bottom: 1vw;
+            font-size: 1.6vw;
+            font-family: "bm_jua";
+            font-weight: 500;
+            text-align: center;
+        }
+        p {
+            color: #e9075e;
+            width: 100%;
+        }
+    }
     footer {
         display: flex;
         justify-content: center;
@@ -74,16 +97,20 @@
             display: inline-block;
             color: #ffffff;
             border-width: 0vw;
-            width: 5vw;
+            padding-left: 1vw;
+            padding-right: 1vw;
             height: 1.5vw;
+            font-family: "bm_jua";
             font-size: 1vw;
             border-radius: 0.75vw;
             cursor: pointer;
         }
-        button.Success {
+        button.Success,
+        button.Input {
             background-color: #741188;
         }
-        button.Success:hover {
+        button.Success:hover,
+        button.Input:hover {
             background-color: #8d15a5;
         }
         button.Failed {
@@ -91,6 +118,12 @@
         }
         button.Failed:hover {
             background-color: #fa8b7f;
+        }
+
+        button.Input {
+            font-size: 1.6vw;
+            height: 1.8vw;
+            border-radius: 2vw;
         }
     }
     // width: 300px;
