--- a/components/PopUp.module.scss
+++ b/components/PopUp.module.scss
@@ -14,6 +14,10 @@
         font-weight: 700;
         margin: 0vw;
     }
+
+    p.warning {
+        color: #ff0000;
+    }
     // width: 300px;
 }
 
