--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -215,42 +215,11 @@ $bg_partner: (
 }
 
 // wallet button
-.walleton,
-.walletoff {
+.wallet {
     margin-top: 2.5vw;
-    float: right;
     right: 4vw;
-    width: 10vw;
-    height: 5vw;
-    color: #fff;
-    text-align: center;
-    h3 {
-        margin: 0vw auto;
-        line-height: 4vw;
-        width: 7vw;
-        height: 3.6vw;
-        vertical-align: middle;
-        line-break: auto;
-        text-overflow: ellipsis;
-        font-family: bm_jua;
-        font-size: 1vw;
-    }
+    float: right;
 }
-
-// .walletoff {
-//   h3 {
-//     display: -webkit-box;
-//     -webkit-line-clamp: 2; /* number of lines to show */
-//             line-clamp: 2;
-//     -webkit-box-orient: vertical;
-//   }
-// }
-
-// .walleton {
-//   h3 {
-//     // line-height: vw;
-//   }
-// }
 
 .logo {
     // $width: 38vw;
