--- a/styles/Minigame.module.scss
+++ b/styles/Minigame.module.scss
@@ -11,6 +11,7 @@
     // width: 99vw;
     // height: 1000vh;
     header {
+        position: relative;
         .mainNav {
             display: inline-block;
             padding-left: 4vw;
@@ -34,6 +35,27 @@
                     }
                 }
             }
+        }
+
+        .SD,
+        .wallet {
+            float: right;
+            margin-top: 2.5vw;
+        }
+
+        .SD {
+            position: relative;
+            display: inline-block;
+            color: #fff;
+            height: 4vw;
+            right: 5vw;
+            font-family: "bm_jua";
+            font-size: 2vw;
+            line-height: 4.2vw;
+        }
+
+        .wallet {
+            right: 4vw;
         }
     }
 
@@ -104,7 +126,7 @@
             display: inline-block;
             background-image: url("/images/cat1.png");
             background-size: cover;
-            width: 22vw;
+            width: 20vw;
             height: 20vw;
             margin: 1vw 0vw 0vw 5vw;
             z-index: 1;
@@ -164,6 +186,7 @@
         }
 
         .discord {
+            display: block;
             position: relative;
             margin: auto;
             $width: 60vw;
