--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -118,6 +118,7 @@ $bg_partner: (
     position: relative;
     width: img($bg_main, "width");
     height: img($bg_main, "height");
+    z-index: 1;
 
     // nav {
     //   display: inline-block;
@@ -276,6 +277,7 @@ $bg_partner: (
     box-sizing: border-box;
     height: img($bg_story, "height") - $marinTop + 10vw;
     width: 100%;
+    z-index: 0;
 
     margin-top: $marinTop;
     article {
@@ -288,6 +290,27 @@ $bg_partner: (
             font-family: "badabb";
             color: white;
             font-size: 7vw;
+        }
+
+        div {
+            font-family: "bm_jua";
+            // font-size: 1.1em;
+            // line-height: 1.2em;
+            font-size: 2.8vw;
+            color: #ffffff;
+            height: 70vw;
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar {
+                -webkit-appearance: none;
+                width: 7px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 4px;
+                background-color: rgba(0, 0, 0, 0.5);
+                box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+            }
         }
     }
 }
@@ -303,6 +326,8 @@ $bg_partner: (
     margin-top: $marginTop;
     height: img($bg_mission, "height");
     width: 100%;
+    z-index: 1;
+    position: relative;
     h2 {
         text-transform: uppercase;
         text-align: center;
@@ -810,4 +835,5 @@ $bg_partner: (
     width: $width;
     height: $height;
     animation: meteor 6s ease-in-out infinite;
+    z-index: -1;
 }
