--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -17,3 +17,8 @@
     font-family: digi;
     src: url("/fonts/DS-DIGI.TTF");
 }
+
+@font-face {
+    font-family: Comfortaa;
+    src: url("/fonts/Comfortaa-VariableFont_wght.ttf");
+}
