--- a/styles/dashboard.module.scss
+++ b/styles/dashboard.module.scss
@@ -131,6 +131,12 @@
         font-size: 2vw;
         color: #c6e2ff;
         animation: neon 0.08s ease-in-out infinite alternate;
+
+        p.loading {
+            display: block;
+            text-align: center;
+            line-height: 15vw;
+        }
     }
 
     main.overview {
