adjust layout and change bg mission image

--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/fonts.scss";
 
 .Modal {
-    background-color: #ffffff70;
+    background-color: #ffffff;
     margin-top: 0vw;
     padding: 1.3vw 3vw;
     border-radius: 1vw;
@@ -76,7 +76,7 @@
             width: 28vw;
             border-radius: 2vw;
             height: 2.5vw;
-            border-width: 0vw;
+            border-width: 3px;
             padding: 0vw 1vw;
             margin-bottom: 1vw;
             font-size: 1.6vw;
