--- a/components/PopUp.module.scss
+++ b/components/PopUp.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/fonts.scss";
 
 .Modal {
-    background-color: #ffffffda;
+    background-color: #ffffff;
     margin-top: 0vw;
     padding: 1.3vw 3vw;
     border-radius: 1vw;
