--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -118,6 +118,7 @@ $bg_partner: (
     position: relative;
     width: img($bg_main, "width");
     height: img($bg_main, "height");
+    z-index: 1;
 
     // nav {
     //   display: inline-block;
@@ -149,7 +150,8 @@ $bg_partner: (
                     font-family: "badabb";
                 }
                 a:hover {
-                    text-decoration: underline;
+                    // text-decoration: underline;
+                    text-shadow: 2px 2px 0vw #000000;
                 }
             }
         }
@@ -167,12 +169,12 @@ $bg_partner: (
     top: img($m_skyDevice, "y") + 5vw;
     left: img($m_skyDevice, "x") + 3vw;
     width: 12vw;
-    font-size: 2vw;
+    font-size: 1.8vw;
     display: inline-block;
     text-align: center;
     color: #fff;
     text-shadow: 0px 0px 0.5vw #000000;
-    font-family: "bravery" !important;
+    font-family: "badabb" !important;
 }
 .mint {
     position: absolute;
@@ -183,7 +185,7 @@ $bg_partner: (
     // width: 5vw;
     // height: 3vw;
     color: #fff;
-    font-family: "bravery" !important;
+    font-family: "badabb" !important;
     text-shadow: 0px 0px 0.5vw #000000;
 
     font-size: 3vw;
@@ -223,12 +225,12 @@ $bg_partner: (
 
 .logo {
     // $width: 38vw;
-    $width: 32vw;
+    $width: 26vw;
     // $height: 22vw;
-    $height: 16vw;
+    $height: 12vw;
     position: absolute !important;
     // top: 16vw;
-    top: 10vw;
+    top: 14vw;
     left: calc((100vw - $width) / 2);
     span {
         width: $width !important;
@@ -276,6 +278,7 @@ $bg_partner: (
     box-sizing: border-box;
     height: img($bg_story, "height") - $marinTop + 10vw;
     width: 100%;
+    z-index: 0;
 
     margin-top: $marinTop;
     article {
@@ -289,12 +292,34 @@ $bg_partner: (
             color: white;
             font-size: 7vw;
         }
+
+        div {
+            font-family: "bm_jua";
+            // font-size: 1.1em;
+            // line-height: 1.2em;
+            font-size: 2.8vw;
+            color: #ffffff;
+            height: 70vw;
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar {
+                -webkit-appearance: none;
+                width: 7px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 4px;
+                background-color: rgba(0, 0, 0, 0.5);
+                box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+            }
+        }
     }
 }
 
 // mission section
 .mission {
-    $marginTop: -18.1vw;
+    // $marginTop: -18.1vw;
+    $marginTop: -32vw;
     background-image: img($bg_mission, "url");
     background-size: img($bg_mission, "size");
     background-repeat: no-repeat;
@@ -303,6 +328,8 @@ $bg_partner: (
     margin-top: $marginTop;
     height: img($bg_mission, "height");
     width: 100%;
+    z-index: 1;
+    position: relative;
     h2 {
         text-transform: uppercase;
         text-align: center;
@@ -395,7 +422,7 @@ $bg_partner: (
             position: absolute;
             width: 28vw;
             left: 17vw;
-            top: 4vw;
+            top: 7vw;
             transform: rotate(-4deg);
             color: #fff;
             text-transform: uppercase;
@@ -416,8 +443,8 @@ $bg_partner: (
             // top: 20vw;
             width: 38vw;
             height: 45vw;
-            left: 18.5vw;
-            top: 14vw;
+            left: 17.5vw;
+            top: 18vw;
             box-sizing: border-box;
             cursor: pointer;
             text-align: center;
@@ -637,13 +664,13 @@ $bg_partner: (
 
     .socials {
         position: absolute;
-        top: 70vw;
+        top: 73vw;
         .socialIcon1,
         .socialIcon2,
         .socialIcon3 {
             position: relative;
-            $width: 6vw;
-            $height: 6vw;
+            $width: 4vw;
+            $height: 4vw;
             // left: 100vw - $width;
             span {
                 width: $width !important;
@@ -652,7 +679,7 @@ $bg_partner: (
         }
 
         .socialIcon1 {
-            left: 40vw;
+            left: 42vw;
         }
 
         .socialIcon2 {
@@ -660,7 +687,7 @@ $bg_partner: (
         }
 
         .socialIcon3 {
-            left: 54vw;
+            left: 52vw;
         }
     }
     a {
@@ -670,11 +697,12 @@ $bg_partner: (
         width: 100%;
         position: absolute;
         font-family: bravery;
-        font-size: 4vw;
+        font-size: 3vw;
         color: #fff;
         display: block;
         text-align: center;
         text-align: center;
+        font-family: "badabb";
     }
 }
 
@@ -810,4 +838,5 @@ $bg_partner: (
     width: $width;
     height: $height;
     animation: meteor 6s ease-in-out infinite;
+    z-index: -1;
 }
