--- a/components/MintCard.module.scss
+++ b/components/MintCard.module.scss
@@ -23,6 +23,7 @@
     font-family: "digi";
     // background-color: rgba(0, 255, 255, 0.37);
     z-index: 2;
+    white-space: pre-line;
 }
 
 .title {
