--- a/components/PopUp.module.scss
+++ b/components/PopUp.module.scss
@@ -10,7 +10,7 @@
     p {
         color: #ca55e1;
         font-size: 1.2vw;
-        font-style: "bm_jua";
+        font-family: "bm_jua";
         font-weight: 700;
         margin: 0vw;
     }
