fix alert font size and font family

--- a/components/PopUp.module.scss
+++ b/components/PopUp.module.scss
@@ -6,10 +6,11 @@
     padding: 1.3vw 3vw;
     border-radius: 1vw;
     border-width: 0vw;
+    font-family: "bm_jua";
     // opacity: 0.5;
     p {
         color: #ca55e1;
-        font-size: 1.2vw;
+        font-size: 2vw;
         font-family: "bm_jua";
         font-weight: 700;
         margin: 0vw;
