fix custom font flashing

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,24 +1,29 @@
 @font-face {
     font-family: badabb;
     src: url("/fonts/BADABB__.TTF");
+    font-display: block;
 }
 
 @font-face {
     font-family: bm_jua;
     src: url("/fonts/BM JUA.ttf");
+    font-display: block;
 }
 
 @font-face {
     font-family: bravery;
     src: url("/fonts/Bravary.ttf");
+    font-display: block;
 }
 
 @font-face {
     font-family: digi;
     src: url("/fonts/DS-DIGI.TTF");
+    font-display: block;
 }
 
 @font-face {
     font-family: Comfortaa;
     src: url("/fonts/Comfortaa-VariableFont_wght.ttf");
+    font-display: block;
 }
