--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -99,11 +99,12 @@
             border-width: 0vw;
             padding-left: 1vw;
             padding-right: 1vw;
-            height: 1.5vw;
+            // height: 1.5vw;
             font-family: "bm_jua";
-            font-size: 1vw;
+            font-size: 2vw;
             border-radius: 0.75vw;
             cursor: pointer;
+            padding: 1vw 2vw;
         }
         button.Success,
         button.Input {
@@ -122,7 +123,7 @@
 
         button.Input {
             font-size: 1.6vw;
-            height: 1.8vw;
+            // height: 1.8vw;
             border-radius: 2vw;
         }
     }
