adjust card label

--- a/components/Card.module.scss
+++ b/components/Card.module.scss
@@ -45,7 +45,7 @@
 
 .title {
     width: 70%;
-    top: 5%;
+    top: 6%;
     left: 16%;
 }
 
@@ -55,4 +55,5 @@
     top: 78%;
     left: 9%;
     line-height: 250%;
+    font-size: 1.1vw;
 }
