--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -40,9 +40,9 @@
         margin: 0vw;
         text-align: center;
         p {
-            font-size: 2vw;
+            font-size: 2vw !important;
             font-weight: 700;
-            width: 20vw;
+            width: 40vw;
             max-height: 30vw;
             word-wrap: break-word;
             overflow-y: auto;
@@ -56,7 +56,7 @@
     main.Input {
         color: #741188;
         h5 {
-            font-size: 1.6vw;
+            font-size: 2vw;
             margin: 1vw 0vw 0vw 0vw;
         }
         p {
@@ -73,9 +73,9 @@
         }
         input {
             color: #741188;
-            width: 28vw;
+            width: 40vw;
             border-radius: 2vw;
-            height: 2.5vw;
+            height: 3.5vw;
             border-width: 3px;
             padding: 0vw 1vw;
             margin-bottom: 1vw;
