index footer with social link
change minigame wording from white list > whitelist

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -663,8 +663,9 @@ $bg_partner: (
     }
 
     .socials {
+        display: flex;
         position: absolute;
-        top: 73vw;
+        top: 82vw;
         .socialIcon1,
         .socialIcon2,
         .socialIcon3 {
