--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -166,29 +166,33 @@ $bg_partner: (
 .info {
     display: inline-block;
     position: absolute;
-    top: img($m_skyDevice, "y") + 5vw;
+    top: img($m_skyDevice, "y") + 5.3vw;
     left: img($m_skyDevice, "x") + 3vw;
     width: 12vw;
-    font-size: 1.8vw;
+    font-size: 1.5vw;
     display: inline-block;
     text-align: center;
     color: #fff;
     text-shadow: 0px 0px 0.5vw #000000;
-    font-family: "badabb" !important;
+    font-family: "bm_jua" !important;
 }
 .mint {
     position: absolute;
     display: inline-block;
     top: img($m_skyDevice, "y") + 15vw;
-    left: img($m_skyDevice, "x") + 6.5vw;
+    left: img($m_skyDevice, "x") + 6vw;
     // background-color: aqua;
     // width: 5vw;
     // height: 3vw;
     color: #fff;
-    font-family: "badabb" !important;
+    font-family: "bm_jua" !important;
     text-shadow: 0px 0px 0.5vw #000000;
 
-    font-size: 3vw;
+    font-size: 2.6vw;
+}
+
+.mint:hover {
+    text-shadow: 3px -1px 0vw #000000;
 }
 
 .countdown {
@@ -201,18 +205,21 @@ $bg_partner: (
     width: 26vw;
     height: 6vw;
     h3 {
-        // position: absolute;
-        top: 1.1vw;
-        margin: 0vw auto;
-        width: 9vw;
-        height: 3.6vw;
-        // text-align: center;
-        vertical-align: middle;
-        line-break: auto;
-        text-overflow: ellipsis;
-        font-family: bm_jua;
-        font-size: 1.6vw;
-        line-height: 6vw;
+        // // position: absolute;
+        // top: 1.1vw;
+        // margin: 0vw auto;
+        // width: 9vw;
+        // height: 3.6vw;
+        // // text-align: center;
+        // vertical-align: middle;
+        // line-break: auto;
+        // text-overflow: ellipsis;
+        // font-family: bm_jua;
+        // font-size: 1.6vw;
+        // line-height: 6vw;
+        line-height: 4.5vw;
+        text-align: center;
+        font-size: 2vw;
     }
 }
 
