change minigame link
minigame is coming soon as a popup message

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -751,6 +751,10 @@ $bg_partner: (
     animation: basket 5s ease-in-out infinite;
 }
 
+.basket:hover {
+    cursor: pointer;
+}
+
 .opensea {
     position: absolute !important;
     // padding-top: -20vw;
