--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -27,3 +27,8 @@
     src: url("/fonts/Comfortaa-VariableFont_wght.ttf");
     font-display: block;
 }
+
+@font-face {
+    font-family: patron;
+    src: url("/fonts/Patron.otf");
+}
