--- a/components/ImageLink.module.scss
+++ b/components/ImageLink.module.scss
@@ -1,16 +1,19 @@
 .ImageLink {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  span {
-    z-index: 0;
-    display: block;
-  }
-  h3 {
-    // margin: 0vw;
-    // padding: 0vw;
+    display: inline-block;
     position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+    cursor: pointer;
+    font-family: "patron" !important;
+    span {
+        z-index: 0;
+        display: block;
+    }
+    h3 {
+        // margin: 0vw;
+        // padding: 0vw;
+        position: relative;
+        z-index: 1;
+        overflow: hidden;
+        font-size: 1.5vw;
+        margin-top: 2.5vw;
+    }
 }
