--- a/components/Team.module.scss
+++ b/components/Team.module.scss
@@ -3,6 +3,7 @@
     flex: 1;
     position: relative;
     margin-top: 5vw;
+    font-family: patron;
 }
 
 .profileimage {
@@ -19,7 +20,7 @@
     text-align: center;
 
     h4 {
-        font-size: 2.2vw;
+        font-size: 1.4vw;
     }
 }
 
@@ -30,6 +31,6 @@
     text-align: center;
 
     h4 {
-        font-size: 1.8vw;
+        font-size: 1.3vw;
     }
 }
