stardust page release 1
main page
 - change ship picture
 - change boat picture
 - fix style to support tailwindcss

--- a/components/ImageBack.module.scss
+++ b/components/ImageBack.module.scss
@@ -1,16 +1,17 @@
 .ImageBack {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  span {
-    z-index: 0;
-    display: block;
-  }
-  h3 {
-    // margin: 0vw;
-    // padding: 0vw;
+    display: inline-block;
     position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+    cursor: pointer;
+    span {
+        z-index: 0;
+        display: block;
+    }
+    h3 {
+        // margin: 0vw;
+        // padding: 0vw;
+        position: relative;
+        z-index: 1;
+        overflow: hidden;
+        margin-top: 22px;
+    }
 }
