--- a/components/MintCard.module.scss
+++ b/components/MintCard.module.scss
@@ -24,6 +24,8 @@
     // background-color: rgba(0, 255, 255, 0.37);
     z-index: 2;
     white-space: pre-line;
+    margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -43,7 +45,7 @@
 }
 
 .amount {
-    top: 78%;
+    top: 80%;
     left: 38%;
     font-size: 180%;
     width: 24%;
