new team member picture profile
fix small layout issue due to conflict with tailwindcss

update roadmap

fix type error

--- a/components/ImageBack.module.scss
+++ b/components/ImageBack.module.scss
@@ -12,6 +12,6 @@
         position: relative;
         z-index: 1;
         overflow: hidden;
-        margin-top: 22px;
+        margin-top: 2vw;
     }
 }
