--- a/components/MintCard.module.scss
+++ b/components/MintCard.module.scss
@@ -24,8 +24,8 @@
     // background-color: rgba(0, 255, 255, 0.37);
     z-index: 2;
     white-space: pre-line;
-    margin-top: 3px;
-    margin-bottom: 10px;
+    // margin-top: 6px;
+    // margin-bottom: 10px;
 }
 
 .title {
@@ -40,7 +40,7 @@
 .contents {
     top: 60%;
     width: 100%;
-    padding: 8% 17%;
+    // padding: 8% 17%;
     font-size: 160%;
 }
 
@@ -50,6 +50,7 @@
     font-size: 180%;
     width: 24%;
     text-align: center;
+    margin-top: 0.7vw;
 }
 
 .img {
