--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,12 @@
     font-display: block;
 }
 
+@font-face {
+    font-family: sfmono;
+    src: url("/Patron-PersonalUse.otf");
+    font-display: block;
+}
+
 @layer utilities {
     /* https://stackoverflow.com/questions/3087360/cant-stop-animation-at-end-of-one-cycle */
     .animation_iteration_count_1 {
@@ -58,6 +64,24 @@
     }
 }
 
+@layer components {
+    .text-2xl {
+        word-break: break-all;
+    }
+
+    .text-sm {
+        word-break: break-all;
+    }
+
+    .textFeliz {
+        font-size: 36px;
+    }
+
+    .textFelizNormal {
+        font-size: 42px;
+    }
+}
+
 html,
 body {
     padding: 0;
@@ -86,4 +110,81 @@ a {
 
 @viewport {
     max-width: 1000px;
+}
+
+.glow-on-hover {
+    width: relative;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: rgb(62, 60, 60);
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #ff0000,
+        #ff7300,
+        #fffb00,
+        #48ff00,
+        #00ffd5,
+        #002bff,
+        #7a00ff,
+        #ff00c8,
+        #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: rgb(23, 23, 23);
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
 }
